--- a/provisioning/roles/geerlingguy.apache/templates/vhosts.conf.j2
+++ b/provisioning/roles/geerlingguy.apache/templates/vhosts.conf.j2
@@ -1,5 +1,36 @@
 {{ apache_global_vhost_settings }}
 
+{# Set up VirtualHosts #}
+
+<VirtualHost {{ apache_listen_ip }}:{{ apache_listen_port }}>
+  ServerName {{ vhost.servername }}
+{% if vhost.serveralias is defined %}
+  ServerAlias {{ vhost.serveralias }}
+{% endif %}
+{% if vhost.documentroot is defined %}
+  DocumentRoot "{{ vhost.documentroot }}"
+{% endif %}
+
+{% if vhost.serveradmin is defined %}
+  ServerAdmin {{ vhost.serveradmin }}
+{% endif %}
+{% if vhost.documentroot is defined %}
+  <Directory "{{ vhost.documentroot }}">
+    AllowOverride {{ vhost.allow_override | default(apache_allow_override) }}
+    Options {{ vhost.options | default(apache_options) }}
+{% if apache_vhosts_version == "2.2" %}
+    Order allow,deny
+    Allow from all
+{% else %}
+    Require all granted
+{% endif %}
+  </Directory>
+{% endif %}
+{% if vhost.extra_parameters is defined %}
+  {{ vhost.extra_parameters }}
+{% endif %}
+</VirtualHost>
+
 <VirtualHost *:80>
   ServerName mediacommons.local
   ServerAlias www.mediacommons.local
@@ -69,31 +100,4 @@
     SetHandler "proxy:fcgi://127.0.0.1:9000"
   </FilesMatch>
 
-</VirtualHost>
-
-<VirtualHost *:80>
-  ServerName adminer.mediacommons.local
-  DocumentRoot "/opt/adminer"
-  <Directory "/opt/adminer">
-    AllowOverride All
-    Options -Indexes +FollowSymLinks
-    Require all granted
-  </Directory>
-  <FilesMatch \.php$>
-    SetHandler "proxy:fcgi://127.0.0.1:9000"
-  </FilesMatch>
-</VirtualHost>
-
-<VirtualHost *:80>
-  ServerName 192.168.88.88
-  ServerAlias dashboard.mediacommons.local
-  DocumentRoot "/var/www/dashboard"
-  <Directory "/var/www/dashboard">
-    AllowOverride All
-    Options -Indexes +FollowSymLinks
-    Require all granted
-  </Directory>
-  <FilesMatch \.php$>
-    SetHandler "proxy:fcgi://127.0.0.1:9000"
-  </FilesMatch>
 </VirtualHost>
