--- a/provisioning/roles/dismorfo.home/templates/bash_aliases.j2
+++ b/provisioning/roles/dismorfo.home/templates/bash_aliases.j2
@@ -1,4 +1,4 @@
-alias drush=/vagrant/source/mediacommons/bin/drush
+alias drush=/vagrant/lib/drush-6.7.0/drush
 alias copy_database_dumps=/vagrant/scripts/copy_database_dumps.sh
 alias copy_sites=/vagrant/scripts/copy_sites.sh
 alias clean_cache=/vagrant/scripts/clean_cache.sh
