--- a/provisioning/roles/dismorfo.home/templates/bash_aliases.j2
+++ b/provisioning/roles/dismorfo.home/templates/bash_aliases.j2
@@ -4,3 +4,5 @@ alias copy_sites=/vagrant/scripts/copy_sites.sh
 alias clean_cache=/vagrant/scripts/clean_cache.sh
 alias solr_index=/vagrant/scripts/solr.sh
 alias import_database_dump=/vagrant/scripts/import_database_dump.sh
+alias uli='/vagrant/lib/drush-6.7.0/drush uli --root=${BUILD_PATH}/mediacommons/drupal'
+alias builds='cd ${BUILD_PATH}'
